<resources>
    <string name="app_name">FlipkartGroceries</string>
    <string name="manage_services">Manage Services</string>
    <string name="home">Home</string>
    <string name="categories_tv">Categories</string>
    <string name="view_categories_tv">View Categories</string>
    <string name="add_category_tv">Add category</string>
    <string name="add_products_tv">Add Products</string>
    <string name="view_products_tv">View Products</string>
    <string name="products_tv">Products</string>
    <string name="submit_tv">Submit</string>
    <string name="add_product_tv">Add Product</string>
    <string name="select_image_tv">Select image</string>
    <string name="category_type_tv">Category Type :</string>
    <string name="product_image_tv">Product Image :</string>
    <string name="product_weight_tv">Product weight :</string>
    <string name="product_mrp_tv">Product MRP :</string>
    <string name="product_price_tv">Product Price :</string>
    <string name="product_description_tv">Product Description :</string>
    <string name="category_image_tv">Category Image</string>
    <string name="category_name_tv">Category Name</string>
    <string name="fruits_tv">Fruits</string>
    <string name="edit_tv">Edit</string>
    <string name="manage_services_tv">Manage Services</string>
    <string name="enter_category_name_tv">Enter Category name</string>
    <string name="enter_category_type_tv">Enter category type</string>
    <string name="enter_product_name_tv">Enter Product name</string>
    <string name="enter_product_weight_tv">Enter Product weight</string>
    <string name="enter_product_mrp_tv">Enter Product MRP</string>
    <string name="product_descriptions_tv">Product description</string>
    <string name="enter_product_price_tv">Enter Product Price</string>
    <string name="admin_dash_board_tv">Admin Dash Board</string>
    <string name="welcome_to_admin_dash_board_tv">Welcome to admin Dash Board</string>
    <string name="frequently_bought_tv">Frequently Bought</string>
    <string name="view_all_tv">View all</string>
    <string name="delete_tv">Delete</string>
    <string name="groceries_in_45_mins_tv">Groceries in 45 Mins</string>
    <string name="fruits_veggies_dairy_and_more_tv">Fruits, Veggies, Dairy and More</string>
    <string name="try_quick_tv">Try Quick</string>
    <string name="shop_by_category_tv">SHOP BY CATEGORY</string>
    <string name="prices_so_low_your_mind_will_blow_tv">Prices So Low, Your Mind Will Blow</string>
    <string name="rice_dal_and_more_tv">Rice, Dal and more</string>
    <string name="oil_ghee_and_more_tv">Oil Ghee and more</string>
    <string name="find_all_ingredients_only_here_tv">Find All Ingredients Only here</string>
    <string name="cook_your_favourite_meals_anywhere_tv">Cook your Favourite Meals Anywhere</string>
    <string name="coffee_tea_and_more_tv">Coffee Tea and more</string>
    <string name="chocolate_snacks_and_more_tv">Chocolate, Snacks and more</string>
    <string name="instant_mix_and_more_tv">Instant Mix and more</string>
    <string name="shop_for_800_to_get_steal_deals_tv">Shop for 800 to get Steal Deals</string>
    <string name="delivery_to_500032_hyderabad_tv">Delivery to 500032, Hyderabad</string>
    <string name="change_tv">Change</string>
    <string name="veggies_at_1_rupee_only_tv">Veggies at 1 rupee only</string>
    <string name="location_tv">Location</string>
    <string name="one">1</string>
    <string name="add_tv">Add</string>
    <string name="manage_services_des_tv">To access the products details , categories detail click here</string>
    <string name="categories_description_tv">To Access the User Categories and products data, click here</string>
    <string name="grocery_tv">Grocery</string>
    <string name="flipkart_tv">Flipkart</string>
    <string name="free_delivery_tv">Free Delivery Above 99</string>
    <string name="limited_time_deals_tv">Limited Time Deals</string>
    <string name="grab_tomato_tv">Grab Tomato 1 Kg at 1/- *</string>
    <string name="offer_description">Offer will reflect at checkout</string>
    <string name="admin_image_tv">Admin Image</string>
    <string name="update_tv">Update</string>
    <string name="auto_reading_otp">Auto reading otp</string>


</resources>