<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.flipkartgroceries.manageServices.ManageServicesViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/categoriesCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/dimen_10">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dimen_10">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/categoryTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categories_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addCategoryBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_category_tv"
                android:onClick="@{()->viewModel.addCategoryBtn()}"
                app:layout_constraintEnd_toStartOf="@id/viewCategoryBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/categoryTv" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/viewCategoryBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10"
                android:text="@string/view_categories_tv"
                android:onClick="@{()->viewModel.viewCategoriesBtn()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/addCategoryBtn"
                app:layout_constraintTop_toBottomOf="@id/categoryTv" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/itemProductsCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/categoriesCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/dimen_10">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dimen_10">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productsTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/products_tv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/addProductsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:onClick="@{()->viewModel.addProductsBtn()}"
                app:layout_constraintEnd_toStartOf="@id/viewProductsBtn"
                app:layout_constraintTop_toBottomOf="@id/productsTv"
                android:text="@string/add_products_tv"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/viewProductsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_products_tv"
                android:onClick="@{()->viewModel.viewProductsBtn()}"
                app:layout_constraintStart_toEndOf="@id/addProductsBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/productsTv"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>

</layout>
