<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="item"
            type="com.example.flipkartgroceries.database.ProductsEntity" />
    </data>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_small">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dimen_10">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productImageTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:text="@string/product_image_tv"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/categoryTypeTv"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/productImageVw"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:layout_marginStart="@dimen/dimen_small"
                android:src="@drawable/fresh"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/RoundedSquare" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/categoryTypeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:text="@string/category_type_tv"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/productImageVw" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/categoryNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{item.categoryName}"
                tools:text="Fruits and vegetables"
                android:layout_marginStart="@dimen/dimen_small"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/categoryTypeTv"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintTop_toTopOf="@id/categoryTypeTv" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productWeightTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:text="@string/product_weight_tv"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/categoryTypeTv" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1kg"
                android:text="@{item.productWeight}"
                android:layout_marginStart="@dimen/dimen_small"
                app:layout_constraintBottom_toBottomOf="@id/productWeightTv"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintTop_toTopOf="@id/productWeightTv" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productMRPTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:text="@string/product_mrp_tv"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/productWeightTv" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="700/-"
                android:text="@{item.productMRP}"
                android:layout_marginStart="@dimen/dimen_small"
                app:layout_constraintBottom_toBottomOf="@id/productMRPTv"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintTop_toTopOf="@id/productMRPTv" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productPriceTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:text="@string/product_price_tv"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/productMRPTv" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="200/-"
                android:text="@{item.productPrice}"
                android:layout_marginStart="@dimen/dimen_small"
                app:layout_constraintBottom_toBottomOf="@id/productPriceTv"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintTop_toTopOf="@id/productPriceTv" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productDescriptionTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:text="@string/product_description_tv"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@id/productPriceTv" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/descriptionDetailTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="expire date : Best before use 12 days of manufacture date"
                android:layout_marginStart="@dimen/dimen_small"
                android:text="@{item.description}"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/editBtn"
                app:layout_constraintTop_toTopOf="@id/productDescriptionTv" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="right"
                app:constraint_referenced_ids="productImageTV,categoryTypeTv,productDescriptionTv,productWeightTv,productMRPTv,productPriceTv" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/editBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_tv"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/margin_small"
                app:layout_constraintTop_toBottomOf="@id/descriptionDetailTv"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/deleteBtn"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_tv"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/margin_small"
                app:layout_constraintTop_toBottomOf="@id/descriptionDetailTv"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/editBtn"
                android:backgroundTint="@color/white"
                android:textColor="@color/red"
                app:strokeWidth="@dimen/dimen_1"
                app:strokeColor="@color/red"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>
